<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AlarmProfileDetailActivity">

    <LinearLayout android:id="@+id/itemsContainer"
                  android:layout_width="match_parent"
                  android:layout_height="386dp"
                  android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/profileName"
                  app:layout_constraintStart_toStartOf="parent">
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:scrollbars="vertical"
                android:id="@+id/alarmList"
                android:divider="@android:drawable/divider_horizontal_textfield" android:dividerHeight="1dp"
                android:layout_marginBottom="1dp" app:layout_constraintVertical_bias="0.0"/>
    </LinearLayout>
    <EditText
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:ems="10"
            android:id="@+id/profileName"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" tools:ignore="Autofill"/>
    <TextView
            android:text="@string/profileName"
            android:labelFor="@+id/profileName"
            android:layout_width="75dp"
            android:layout_height="27dp"
            android:id="@+id/profileNameLabel" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/profileName"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/profileAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accept" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/colorAccept"/>
    <Button
            android:text="@string/profileAddAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addAlarm" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/profileAddAlarm"/>
</androidx.constraintlayout.widget.ConstraintLayout>